force-app/main/default/objects/Main__c/Main__c.object-meta.xml
<CustomObject>
    <label>Main</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Main Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>