force-app/main/default/objects/Main__c/fields/join_Picklist__c.field-meta.xml
<CustomField>
    <fullName>join_Picklist__c</fullName>
    <label>join Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>12312321312</fullName>
            </value>
            <value>
                <fullName>BOb</fullName>
            </value>
            <value>
                <fullName>JOHN</fullName>
            </value>
            <value>
                <fullName>JOINT</fullName>
            </value>
            <value>
                <fullName>NEWDAY</fullName>
            </value>
            <value>
                <fullName>NEWDAY100</fullName>
            </value>
            <value>
                <fullName>PRODUCT400</fullName>
            </value>
            <value>
                <fullName>PRODUCT 400</fullName>
            </value>
            <value>
                <fullName>PRODUCT401</fullName>
            </value>
            <value>
                <fullName>PRODUCT402</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>