force-app/main/default/objects/Main__c/fields/Primary_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Primary_Picklist__c</fullName>
    <label>Primary Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PROD 1</fullName>
            </value>
            <value>
                <fullName>PROD 2</fullName>
            </value>
            <value>
                <fullName>Product 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>