force-app/main/default/objects/Main__c/fields/Secondary_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Picklist__c</fullName>
    <label>Dependent Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Picklist__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>P100</fullName>
            </value>
            <value>
                <fullName>PROD 22</fullName>
            </value>
            <value>
                <fullName>PROD61</fullName>
            </value>
            <value>
                <fullName>PROD62</fullName>
            </value>
            <value>
                <fullName>PROD63</fullName>
            </value>
            <value>
                <fullName>PROD64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>